chore: add commit message lint

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "hooks": {
-    "commit-msg": "commitlint -e $GIT_PARAMS"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $GIT_PARAMS"
+    }
   }
 }
