--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "mlz-pack",
-  "version": "1.0.1",
+  "version": "0.0.1",
   "description": "mlz-pack",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "bin": {
+    "mlz-pack": "./bin/mlz-pack"
+  },
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "start": "tsc --watch",
     "commit": "git-cz",
     "release": "standard-version"
   },
@@ -26,6 +30,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "@types/express": "^4.17.1",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "husky": "^3.0.5",
@@ -41,5 +46,19 @@
     "hooks": {
       "commit-msg": "commitlint -e $GIT_PARAMS"
     }
+  },
+  "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "commander": "^3.0.1",
+    "connect-history-api-fallback": "^1.6.0",
+    "css-loader": "^3.2.0",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.39.3",
+    "webpack-dev-middleware": "^3.7.1",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
