--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "tsc --watch",
+    "test:smoke": "node test/smoke",
     "commit": "git-cz",
     "release": "standard-version"
   },
@@ -33,7 +34,10 @@
     "@types/express": "^4.17.1",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
+    "glob-all": "^3.1.0",
     "husky": "^3.0.5",
+    "mocha": "^6.2.0",
+    "rimraf": "^3.0.0",
     "standard-version": "^7.0.0",
     "validate-commit-msg": "^2.14.0"
   },
@@ -50,11 +54,14 @@
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@darkobits/lolcatjs": "^3.1.3",
     "babel-loader": "^8.0.6",
+    "chalk": "^2.4.2",
     "commander": "^3.0.1",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
+    "figlet": "^1.2.4",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
