--- a/package.json
+++ b/package.json
@@ -55,17 +55,31 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@darkobits/lolcatjs": "^3.1.3",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
+    "clean-webpack-plugin": "^3.0.0",
     "commander": "^3.0.1",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "figlet": "^1.2.4",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "lodash": "^4.17.15",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "thread-loader": "^2.1.3",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.6.2",
     "webpack": "^4.39.3",
     "webpack-dev-middleware": "^3.7.1",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "worker-loader": "^2.0.0"
   }
 }
