--- a/package.json
+++ b/package.json
@@ -71,13 +71,16 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "progress-bar-webpack-plugin": "^1.12.1",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
+    "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.0.4",
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-hot-middleware": "^2.25.0",
     "worker-loader": "^2.0.0"
