--- a/package.json
+++ b/package.json
@@ -54,22 +54,26 @@
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@darkobits/lolcatjs": "^3.1.3",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "commander": "^3.0.1",
+    "compression-webpack-plugin": "^3.0.0",
     "connect-history-api-fallback": "^1.6.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "figlet": "^1.2.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-tags-plugin": "^2.0.17",
+    "inline-manifest-webpack-plugin": "^4.0.2",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
     "resolve-url-loader": "^3.1.0",
@@ -83,6 +87,7 @@
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^4.2.2",
     "worker-loader": "^2.0.0"
   }
 }
