--- a/package.json
+++ b/package.json
@@ -53,9 +53,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/preset-typescript": "^7.6.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "commander": "^3.0.1",
@@ -82,6 +87,8 @@
     "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.0.4",
+    "tslint": "^5.20.0",
+    "tslint-loader": "^3.5.4",
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
