--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.5.5",
@@ -81,7 +82,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
-    "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
@@ -90,6 +90,7 @@
     "tslint": "^5.20.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.6.2",
+    "url-loader": "^2.2.0",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-middleware": "^3.7.1",
