--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "figlet": "^1.2.4",
+    "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "image-webpack-loader": "^6.0.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.15",
