--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mlz-pack",
-  "version": "0.0.1",
+  "name": "@mlz/pack",
+  "version": "0.0.2",
   "description": "mlz-pack",
   "main": "./lib/index.js",
   "bin": {
