--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
+    "react-dev-utils": "^9.1.0",
     "sass-loader": "^8.0.0",
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
@@ -95,8 +96,7 @@
     "url-loader": "^2.2.0",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-dev-middleware": "^3.7.1",
-    "webpack-hot-middleware": "^2.25.0",
+    "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
     "worker-loader": "^2.0.0"
   }
