--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "keywords": [
     "webpack"
   ],
-  "author": "DogJun",
+  "author": "juicecube",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/juicecube/mlz-pack/issues"
@@ -59,6 +59,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@mlz/lint": "^1.0.2",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-css-modules": "^5.2.6",
@@ -88,6 +89,7 @@
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
+    "ts-lint": "^4.5.1",
     "ts-loader": "^6.0.4",
     "tslint": "^5.20.0",
     "tslint-loader": "^3.5.4",
