--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@mlz/lint": "^1.0.2",
+    "@types/lodash.merge": "^4.6.6",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-css-modules": "^5.2.6",
@@ -79,7 +80,7 @@
     "image-webpack-loader": "^6.0.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
     "json-loader": "^0.5.7",
-    "lodash": "^4.17.15",
+    "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
