--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/lodash.merge": "^4.6.6",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
