--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "postcss-pxtorem": "^4.0.1",
     "postcss-scss": "^2.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
     "sass-loader": "^8.0.0",
