--- a/package.json
+++ b/package.json
@@ -78,7 +78,10 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
-    "image-webpack-loader": "^6.0.0",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-optipng": "^7.1.0",
+    "imagemin-svgo": "^7.0.0",
+    "imagemin-webpack": "^5.1.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
     "json-loader": "^0.5.7",
     "lodash.merge": "^4.6.2",
@@ -92,6 +95,7 @@
     "sass-loader": "^8.0.0",
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.2.1",
     "thread-loader": "^2.1.3",
     "ts-lint": "^4.5.1",
     "ts-loader": "^6.0.4",
@@ -99,7 +103,7 @@
     "tslint-loader": "^3.5.4",
     "typescript": "^3.6.2",
     "url-loader": "^2.2.0",
-    "webpack": "^4.39.3",
+    "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
