--- a/package.json
+++ b/package.json
@@ -78,8 +78,10 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "imagemin": "^7.0.0",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-optipng": "^7.1.0",
+    "imagemin-pngquant": "^8.0.0",
     "imagemin-svgo": "^7.0.0",
     "imagemin-webpack": "^5.1.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
@@ -99,6 +101,7 @@
     "thread-loader": "^2.1.3",
     "ts-lint": "^4.5.1",
     "ts-loader": "^6.0.4",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.20.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.6.2",
