--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "tsc --watch",
     "test:smoke": "node test/smoke",
     "commit": "git-cz",
-    "release": "standard-version"
+    "release": "standard-version",
+    "build": "./test.js"
   },
   "repository": {
     "type": "git",
@@ -65,6 +66,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-react-css-modules": "^5.2.6",
+    "bin-wrapper": "^4.1.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "commander": "^3.0.1",
@@ -88,6 +90,7 @@
     "json-loader": "^0.5.7",
     "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^0.8.0",
+    "ncp": "^2.0.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
