--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "test": "test"
   },
   "scripts": {
-    "start": "tsc --watch",
     "test:smoke": "node test/smoke",
     "commit": "git-cz",
-    "release": "standard-version",
-    "build": "./test.js"
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -35,6 +33,7 @@
     "@types/express": "^4.17.1",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
+    "eslint": "^6.6.0",
     "glob-all": "^3.1.0",
     "husky": "^3.0.5",
     "mocha": "^6.2.0",
@@ -61,7 +60,6 @@
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@mlz/lint": "^1.0.2",
-    "@types/lodash.merge": "^4.6.6",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.2",
