--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@mlz/lint": "^1.0.2",
+    "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "bin-wrapper": "^4.1.0",
+    "cache-loader": "^4.1.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "commander": "^3.0.1",
@@ -99,7 +101,6 @@
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
-    "thread-loader": "^2.1.3",
     "ts-lint": "^4.5.1",
     "ts-loader": "^6.0.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
