--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@mlz/imagemin-mozjpeg": "^8.0.1",
+    "@mlz/imagemin-optipng": "^7.1.1",
+    "@mlz/imagemin-webpack": "^5.1.1",
     "@mlz/lint": "^1.0.2",
     "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.6.1",
@@ -82,12 +85,6 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
-    "imagemin": "^7.0.0",
-    "imagemin-jpegtran": "^6.0.0",
-    "imagemin-optipng": "^7.1.0",
-    "imagemin-pngquant": "^8.0.0",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webpack": "^5.1.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
     "json-loader": "^0.5.7",
     "lodash.merge": "^4.6.2",
