--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@mlz/pack",
   "version": "0.1.3",
   "description": "mlz-pack",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "bin": {
     "mlz-pack": "./bin/mlz-pack"
   },
