--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "babel-merge": "^3.0.0",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "bin-wrapper": "^4.1.0",
