--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "test"
   },
   "scripts": {
+    "test": "jest",
     "test:smoke": "node test/smoke",
     "commit": "git-cz",
     "release": "standard-version"
@@ -36,6 +37,7 @@
     "eslint": "^6.6.0",
     "glob-all": "^3.1.0",
     "husky": "^3.0.5",
+    "jest": "^24.9.0",
     "mocha": "^6.2.0",
     "rimraf": "^3.0.0",
     "standard-version": "^7.0.0",
