--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "test"
   },
   "scripts": {
+    "test:webpack": "node test/webpack/dev-test.js",
     "test": "jest",
     "test:watch": "jest -- --watch",
     "test:smoke": "node test/smoke",
@@ -34,6 +35,9 @@
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@types/express": "^4.17.1",
+    "@types/react": "^16.9.11",
+    "@types/react-css-modules": "^4.6.2",
+    "@types/react-dom": "^16.9.4",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.6.0",
@@ -41,6 +45,8 @@
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "mocha": "^6.2.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "rimraf": "^3.0.0",
     "standard-version": "^7.0.0",
     "validate-commit-msg": "^2.14.0"
@@ -73,6 +79,7 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-merge": "^3.0.0",
+    "babel-plugin-const-enum": "0.0.4",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "bin-wrapper": "^4.1.0",
