--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@mlz/imagemin-optipng": "^7.1.1",
     "@mlz/imagemin-webpack": "^5.1.1",
     "@mlz/lint": "^1.0.2",
+    "@svgr/webpack": "^4.3.3",
     "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
