--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "figlet": "^1.2.4",
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "inline-manifest-webpack-plugin": "^4.0.2",
