--- a/package.json
+++ b/package.json
@@ -87,23 +87,17 @@
     "babel-plugin-const-enum": "0.0.4",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-react-css-modules": "^5.2.6",
-    "bin-wrapper": "^4.1.0",
     "cache-loader": "^4.1.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "commander": "^3.0.1",
-    "connect-history-api-fallback": "^1.6.0",
     "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.4.5",
     "css-loader": "^3.2.0",
-    "express": "^4.17.1",
-    "figlet": "^1.2.4",
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "html-webpack-tags-plugin": "^2.0.17",
-    "inline-manifest-webpack-plugin": "^4.0.2",
-    "json-loader": "^0.5.7",
     "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^0.8.0",
     "ncp": "^2.0.0",
@@ -117,11 +111,8 @@
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
-    "ts-lint": "^4.5.1",
     "ts-loader": "^6.0.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.20.0",
-    "tslint-loader": "^3.5.4",
     "typescript": "^3.6.2",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
