--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "happypack": "^5.0.1",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^0.8.0",
@@ -111,6 +112,7 @@
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
+    "thread-loader": "^2.1.3",
     "ts-loader": "^6.0.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.2",
