--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.7.2",
+    "@mlz/babel-merge": "^2.0.1",
     "@mlz/imagemin-mozjpeg": "^8.0.1",
     "@mlz/imagemin-optipng": "^7.1.1",
     "@mlz/imagemin-webpack": "^5.1.1",
@@ -83,7 +84,6 @@
     "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
-    "babel-merge": "^3.0.0",
     "babel-plugin-const-enum": "0.0.4",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-react-css-modules": "^5.2.6",
