--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@mlz/imagemin-optipng": "^7.1.1",
     "@mlz/imagemin-webpack": "^5.1.1",
     "@mlz/lint": "^1.0.2",
+    "@sentry/webpack-plugin": "^1.9.3",
     "@svgr/webpack": "^4.3.3",
     "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.6.1",
@@ -121,6 +122,7 @@
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
+    "webpack-sentry-plugin": "^2.0.2",
     "worker-loader": "^2.0.0"
   }
 }
