--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "progress-bar-webpack-plugin": "^1.12.1",
     "sass-loader": "^8.0.0",
     "speed-measure-webpack-plugin": "^1.3.1",
-    "style-loader": "^1.0.0",
+    "style-loader": "1.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "ts-loader": "^6.0.4",
     "tsconfig-paths": "^3.9.0",
