--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-const-enum": "0.0.4",
     "babel-plugin-import": "^1.12.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-react-css-modules": "^5.2.6",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
