--- a/package.json
+++ b/package.json
@@ -102,13 +102,13 @@
     "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^0.8.0",
     "ncp": "^2.0.0",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import-sync2": "^1.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
     "postcss-scss": "^2.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
+    "sass": "^1.24.2",
     "sass-loader": "^8.0.0",
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "1.0.0",
