--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e $GIT_PARAMS",
+      "pre-commit": "eslint",
       "pre-push": "npm run test && npm run test:webpack"
     }
   },
