--- a/package.json
+++ b/package.json
@@ -28,9 +28,15 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e $GIT_PARAMS",
-      "pre-commit": "eslint",
+      "pre-commit": "lint-staged",
       "pre-push": "npm run test && npm run test:webpack"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -59,6 +65,7 @@
     "glob-all": "^3.1.0",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
     "mocha": "^6.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
