--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,6 @@
-name: Node CI
+name: Publish
 
-on: [push]
+on: [release]
 
 jobs:
   build:
@@ -17,12 +17,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm ci
-        npm test
-      env:
-        CI: true
+        registry-url: https://registry.npmjs.org/
+    - run: npm install
     - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      env: 
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
