--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lint-staged": "^9.5.0",
     "mocha": "^6.2.0",
     "react": "^16.11.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^16.11.0",
     "rimraf": "^3.0.0",
     "standard-version": "^7.0.0",
