--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 mozjpeg_binary_site=https://npm.taobao.org/mirrors/mozjpeg-bin
 optipng_binary_site=https://npm.taobao.org/mirrors/optipng-bin
+sentrycli_cdnurl=https://npm.taobao.org/mirrors/sentry-cli
