--- a/package.json
+++ b/package.json
@@ -46,86 +46,87 @@
   },
   "homepage": "https://github.com/juicecube/mlz-pack#readme",
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "@mlz/lint": "^1.1.8",
-    "@types/express": "^4.17.1",
-    "@types/react": "^16.9.11",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@mlz/lint": "^1.1.10",
+    "@types/express": "^4.17.9",
+    "@types/react": "^17.0.0",
     "@types/react-css-modules": "^4.6.2",
-    "@types/react-dom": "^16.9.4",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^3.0.2",
+    "@types/react-dom": "^17.0.0",
+    "commitizen": "^4.2.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.6.0",
     "glob-all": "^3.2.1",
-    "husky": "^3.0.5",
-    "jest": "^25.1.0",
-    "lint-staged": "^9.5.0",
-    "mocha": "^6.2.0",
-    "react": "^16.11.0",
+    "husky": "^4.3.7",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "mocha": "^8.2.1",
+    "react": "^17.0.1",
     "react-css-modules": "^4.7.11",
-    "react-dom": "^16.11.0",
-    "rimraf": "^3.0.0",
-    "standard-version": "^7.0.0",
-    "validate-commit-msg": "^2.14.0"
+    "react-dom": "^17.0.1",
+    "rimraf": "^3.0.2",
+    "standard-version": "^9.1.0",
+    "validate-commit-msg": "^2.14.0",
+    "webpack": "^5.14.0",
+    "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.7.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.6.3",
-    "@babel/preset-typescript": "^7.7.2",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@mlz/babel-merge": "^2.0.2",
     "@mlz/imagemin-mozjpeg": "^8.0.1",
     "@mlz/imagemin-optipng": "^7.1.1",
     "@mlz/imagemin-webpack": "^5.1.1",
-    "@sentry/webpack-plugin": "^1.9.3",
-    "@svgr/webpack": "^4.3.3",
+    "@sentry/webpack-plugin": "^1.14.0",
+    "@svgr/webpack": "^5.5.0",
     "autodll-webpack-plugin": "^0.4.2",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-const-enum": "0.0.4",
-    "babel-plugin-import": "^1.12.2",
-    "babel-plugin-module-resolver": "^4.0.0",
+    "autoprefixer": "^10.2.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-const-enum": "^1.0.1",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-css-modules": "^5.2.6",
-    "chalk": "^2.4.2",
+    "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "commander": "^3.0.1",
-    "copy-webpack-plugin": "^5.0.4",
-    "core-js": "^3.4.5",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
+    "commander": "^6.2.1",
+    "copy-webpack-plugin": "^7.0.0",
+    "core-js": "^3.8.2",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^5.0.0-beta.4",
     "lodash.merge": "^4.6.2",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^1.3.3",
     "ncp": "^2.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-import-sync2": "^1.1.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-pxtorem": "^4.0.1",
-    "postcss-scss": "^2.0.0",
-    "progress-bar-webpack-plugin": "^1.12.1",
-    "sass": "^1.24.2",
-    "sass-loader": "^8.0.0",
-    "speed-measure-webpack-plugin": "^1.3.1",
-    "style-loader": "1.0.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "ts-loader": "^6.0.4",
+    "postcss-loader": "^4.1.0",
+    "postcss-pxtorem": "^5.1.1",
+    "postcss-scss": "^3.0.4",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.0",
+    "ts-loader": "^8.0.14",
     "tsconfig-paths": "^3.9.0",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.6.2",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-sentry-plugin": "^2.0.2",
-    "worker-loader": "^2.0.0"
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
+    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-dev-server": "^3.11.1",
+    "webpack-merge": "^5.7.3",
+    "webpack-sentry-plugin": "^2.0.3",
+    "worker-loader": "^3.0.7"
   }
 }
