--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^5.0.0-beta.4",
+    "html-webpack-plugin": "^4.5.1",
     "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^1.3.3",
     "ncp": "^2.0.0",
