--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mlz/pack",
-  "version": "1.0.18",
+  "version": "2.0.0-alpha.1",
   "description": "mlz-pack",
   "main": "./src/index.js",
   "bin": {
@@ -66,9 +66,7 @@
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.1.0",
-    "validate-commit-msg": "^2.14.0",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1"
+    "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -88,7 +86,7 @@
     "@sentry/webpack-plugin": "^1.14.0",
     "@svgr/webpack": "^5.5.0",
     "autodll-webpack-plugin": "^0.4.2",
-    "autoprefixer": "^10.2.1",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-const-enum": "^1.0.1",
     "babel-plugin-import": "^1.13.3",
@@ -122,7 +120,9 @@
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
+    "webpack": "^5.15.0",
     "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
     "webpack-merge": "^5.7.3",
     "webpack-sentry-plugin": "^2.0.3",
