--- a/package.json
+++ b/package.json
@@ -82,35 +82,36 @@
     "@mlz/imagemin-webpack": "^5.1.1",
     "@sentry/webpack-plugin": "^1.17.1",
     "@svgr/webpack": "^5.5.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.3.4",
     "babel-loader": "^8.2.2",
     "babel-plugin-const-enum": "^1.1.0",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-css-modules": "^5.2.6",
     "chalk": "^4.1.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "commander": "^6.2.1",
-    "copy-webpack-plugin": "^7.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "commander": "^8.2.0",
+    "copy-webpack-plugin": "^9.0.1",
     "core-js": "^3.17.3",
-    "css-loader": "^5.2.7",
+    "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^5.3.2",
     "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^1.6.2",
     "ncp": "^2.0.0",
+    "postcss": "^8.3.6",
     "postcss-import-sync2": "^1.1.0",
-    "postcss-loader": "^4.3.0",
-    "postcss-pxtorem": "^5.1.1",
-    "postcss-scss": "^3.0.5",
-    "sass": "^1.40.0",
+    "postcss-loader": "^6.1.1",
+    "postcss-pxtorem": "^6.0.0",
+    "postcss-scss": "^4.0.0",
+    "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
     "speed-measure-webpack5-plugin": "^1.3.3",
     "style-loader": "^3.2.1",
     "tsconfig-paths": "^3.11.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "webpack": "^5.52.1",
+    "webpack": "^5.53.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1",
