--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "generic-names": "^3.0.0",
     "html-webpack-plugin": "^5.3.2",
     "lodash.merge": "^4.6.2",
     "mini-css-extract-plugin": "^1.6.2",
