--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@mlz/babel-merge": "^2.0.2",
+    "@mlz/babel-plugin-react-css-modules": "^1.0.1",
     "@mlz/imagemin-mozjpeg": "^8.0.1",
     "@mlz/imagemin-optipng": "^7.1.1",
     "@mlz/imagemin-webpack": "^5.1.1",
@@ -87,7 +88,6 @@
     "babel-plugin-const-enum": "^1.1.0",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-react-css-modules": "^5.2.6",
     "chalk": "^4.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "commander": "^8.2.0",
