--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@mlz/lint": "^1.2.1",
+    "@mlz/lint": "^1.2.2",
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.20",
     "@types/react-css-modules": "^4.6.4",
@@ -77,13 +77,13 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@mlz/babel-merge": "^2.0.2",
-    "@mlz/babel-plugin-react-css-modules": "^1.0.5",
+    "@mlz/babel-plugin-react-css-modules": "^1.1.1",
     "@mlz/imagemin-mozjpeg": "^8.0.1",
     "@mlz/imagemin-optipng": "^7.1.1",
     "@mlz/imagemin-webpack": "^5.1.1",
     "@sentry/webpack-plugin": "^1.17.1",
     "@svgr/webpack": "^5.5.0",
-    "autoprefixer": "^9.8.7",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-const-enum": "^1.1.0",
     "babel-plugin-import": "^1.13.3",
@@ -102,7 +102,7 @@
     "mini-css-extract-plugin": "^1.6.2",
     "ncp": "^2.0.0",
     "postcss": "^8.3.6",
-    "postcss-import-sync2": "1.1.0",
+    "postcss-import-sync2": "^1.2.0",
     "postcss-loader": "^6.1.1",
     "postcss-pxtorem": "^6.0.0",
     "postcss-scss": "^4.0.0",
