--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "typescript": "^3.6.2",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
